@@ -2,19 +2,10 @@ TODO
 -> Libraries versionning in doc/libVersionning.html
 
 * cross-compil test command-line
-./bootstrap&& \
-export CPPFLAGS="-I/usr/cross/include/ -mwindows"    &&    \
-    export LDFLAGS=-L/usr/cross/lib/                 &&    \
-    export OGRE_CFLAGS=-I/usr/cross/include/OGRE/    &&    \
-    export OGRE_LIBS="-L/usr/cross/lib -lOgreMain"   &&    \
-    ./configure --host=i586-mingw32msvc --prefix=/usr/cross/
-
+./bootstrap&&./configure --host=i586-mingw32msvc --prefix=/usr/cross/
 
 o [mouse] OgreGui : GUI over Ogre3D based on QuadRenderer
 - gsServerList uses OgreGUI (with MulticolumnList)
-
-o [mouse] Doxygen documentation error
-- removing config/ogre.log
 
 * Unittests
 - Next unit test is common/loadbmp
